<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_title"


            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/riotlogo"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <View
        android:id="@+id/vw1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_name"


            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_job_title"


            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_phone"


            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_address"


            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/txt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_contact"


            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"

            />

    </LinearLayout>


</LinearLayout>